@@ -394,8 +394,10 @@ let mktvariant loc ctl priv =
 let type_decl tl priv cl =
   function
     TyMan (loc, t, pf, MLast.TyRec (_, ltl)) ->
+      let priv = if uv pf then Private else Public in
       mktype loc tl cl (mktrecord ltl (uv pf)) priv (Some (ctyp t))
   | TyMan (loc, t, pf, MLast.TySum (_, ctl)) ->
+      let priv = if uv pf then Private else Public in
       mktype loc tl cl (mktvariant loc ctl (uv pf)) priv (Some (ctyp t))
   | TyRec (loc, ltl) -> mktype loc tl cl (mktrecord (uv ltl) false) priv None
   | TySum (loc, ctl) ->
