@@ -1,6 +1,8 @@
 Camlp5 Version 6.02.2:
 ----------------------
 
+* [18 Jan 11] Fixed bug: private flags in type manifest were not correctly
+  treated.
 * [06 Dec 10] Fixed bug in pr_o.cmo: label expressions were not correctly
   pretty printed: f ~a gave f a.
 
